--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section>
     <h2>WDD 230 - Assignment Portal</h2>
     <ul>
-        <li>lesson 02 <a href="http://127.0.0.1:5500/Lesson2/sing-principale.html/">Assignment link </a></li>
+        <li>lesson 02 <a href="Assignmentlink/">Assignment link </a></li>
         <li>lesson 03 <a href="Assignmentlink/">Assignment link</a></li>
         <li>lesson 04 <a href="Assignmentlink/">Assignment link</a></li>
         
