--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Assignment portal for John Sullivan in WDD 230, BYU-I">
+    <meta name="description" content="Assignment portal for excellent in WDD 230, BYU-I">
     <title>My portal home page</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css">
