--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <title>Europam Study</title>
+    <link rel="stylesheet" href="css/3small.css">
+    <link rel="stylesheet" href="css/3medium.css">
+    <link rel="stylesheet" href="css/3normalize.css">
+    <link rel="stylesheet" href="css/large.css">
+
+
 </head>
+
 <body>
-    
+    <div id="content">
+        <header>
+            <h1> Europam Study</h1>
+                <h2> Mukendi P. Kalota</h2>
+                <div class="logo-box">
+                    <img src="images/mon-logo.png">
+                </div>
+        </header>
+
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active"> Home</a></li>
+                <li><a href="target-audience.html">Target Audience</a></li>
+                <li><a href="color-scheme.html">Color Schame</a></li>
+                <li><a href="typography.html">Typography</a></li>
+
+            </ul>
+        </nav>
+
+        <main>
+
+            <div class="paragraph">
+                <h4>www.europamstudy.com</h4>
+
+                <p>
+                <h4>Purpose:</h4>Europam Study is an academic and social assistance for helping African students to
+                study abroad
+                Because of many young African wished continue their in Europe or America, but they don't know how to
+                proceed. That's why in 2015 we had created Europam Study to assist them with more information about the
+                study abroad.
+                </p>
+            </div>
+        </main>
+
+        <footer>
+            <div class="footer">
+                <p>
+                    &copy;<span id="copyrightyear"></span> 2021 | Patrick K. Mukendi| Bucharest | BYU Online Leaning <a
+                        id="footer" href="https://www.byui.edu/"> BYU-I Online
+                        Learning </a> <br><span id="last-updated">Last Updated: <span id="currentdate"></span>
+                        <span id="currentdate"></span>
+                </p>
+            </div>
+
+        </footer>
+
+        <script src="js/3date.js"></script>
 </body>
+
 </html>
