--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="Lesson2/sing-principale.html">
   </head>
 
 <body>
