--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="Lesson2/sing-principale.html">
+    <link rel="stylesheet" href="Lesson3/index.html">
   </head>
 
 <body>
