--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="Lesson2/sing-principale.html">
-    <link rel="stylesheet" href="Lesson3/index.html">
+   
+    
   </head>
 
 <body>
@@ -27,8 +27,8 @@
     <section>
     <h2>WDD 230 - Assignment Portal</h2>
     <ul>
-        <li>lesson 02 <a href="lesson2/sing-principale.html">DesignP </a></li>
-        <li>lesson 03 <a href="Assignmentlink/">Assignment link</a></li>
+        <li>lesson 02 <a href="lesson2/sing-principale.html">Design sing-principale </a></li>
+        <li>lesson 03 <a href="Lesson3/index.html">site plan</a></li>
         <li>lesson 04 <a href="Assignmentlink/">Assignment link</a></li>
         
     </ul>
