--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <ul>
         <li>lesson 02 <a href="lesson2/sing-principale.html">Design sing-principale </a></li>
         <li>lesson 03 <a href="Lesson3/index.html">site plan</a></li>
-        <li>lesson 04 <a href="Assignmentlink/">Assignment link</a></li>
+        <li>lesson 04 <a href="Lesson4/preston-4.html">Assignment link</a></li>
         
     </ul>
       </section>
