--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/small.css">
-    <link rel="stylesheet" href="css/normalize.css">
+
    
     
   </head>
@@ -31,7 +31,7 @@
         <li>lesson 02 <a href="lesson2/sing-principale.html">Design sing-principale </a></li>
         <li>lesson 03 <a href="Lesson3/index.html">site plan</a></li>
         <li>lesson 04 <a href="Lesson4/preston-4.html">Preston site</a></li>
-        <li>lesson 05 <a href="Lesson5/preston-5.html">Preston2</a></li>
+        <li>lesson 05 <a href="lesson5/preston-5.html">Preston2</a></li>
         
     </ul>
       </section>
