--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <li>lesson 03 <a href="Lesson3/index.html">site plan</a></li>
         <li>lesson 04 <a href="Lesson4/preston-4.html">Preston site</a></li>
         <li>lesson 05 <a href="lesson5/preston-5.html">Preston2</a></li>
+        <li>lesson 05 <a href="Dommanipulation/dom.html">Dom manupulation</a></li>
+
         
     </ul>
       </section>
