--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li>lesson 04 <a href="Lesson4/preston-4.html">Preston site</a></li>
         <li>lesson 05 <a href="lesson5/preston-5.html">Preston2</a></li>
         <li>lesson 05 <a href="Dommanipulation/dom.html">Dom manupulation</a></li>
+        <li>lesson 06 <a href="lesson6/preston-6.html">Pictures analyse</a></li>
 
         
     </ul>
@@ -51,6 +52,15 @@
     </footer>   
 
     <script src="js/date.js"></script>
+    
+    <script>  WebFont.load({
+      google: {
+        families: [
+           'fontfamilynameofyourchoice'
+        ]
+      }
+    });</script>
+
 
   </body>
 </html>  
