--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -71,7 +71,8 @@
      
        
         <div class="good">
-            <img src="images/sunnyday bu.jpg" alt="bucharest">
+            <img src="images/sunnyday bu.jpg" alt="bucharest"
+            srcset="images/s">
             </div>
 
         <div class="text">
