--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li>lesson 05 <a href="lesson5/preston-5.html">Preston2</a></li>
         <li>lesson 05 <a href="Dommanipulation/dom.html">Dom manupulation</a></li>
         <li>lesson 06 <a href="lesson6/preston-6.html">Pictures analyse</a></li>
+        <li>lesson 07 <a href="lesson7/lazyload.html">Lazy Loading</a></li>
 
         
     </ul>
