--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li>lesson 06 <a href="lesson6/preston-6.html">Pictures analyse</a></li>
         <li>lesson 07 <a href="lesson7/lazyload.html">Lazy Loading</a></li>
         <li>lesson 08 <a href="lesson8/stormcenter.html">stormcenter</a></li>
+        <li>lesson 08 <a href="Lesson08/tablebuild.html">Table build</a></li>
 
         
     </ul>
