--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li>lesson 07 <a href="lesson7/lazyload.html">Lazy Loading</a></li>
         <li>lesson 08 <a href="lesson8/stormcenter.html">stormcenter</a></li>
         <li>lesson 08 <a href="Lesson08/tablebuild.html">Table build</a></li>
+        <li>lesson 08 <a href="lesson9/prophets.html">Table build</a></li>
 
         
     </ul>
