--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -72,8 +72,9 @@
      
         <div class="sunny">
         </div>
-        <div class="good">
-            <img src="images/sunnyday bu.jpg" alt="bucharest">
+      
+
+        <div class="texte">
             <p>In sunny Bucharest, it’s Seville that takes the crown as the sunniest spot of all – so much so that
                 it’s been
                 given the nickname “frying pan of Europe”, getting a little under 3000 hours of sunshine every year,
@@ -82,6 +83,10 @@
                 little
                 more permanent, you may be interested to read our guide to moving to Bucharest.</p>
             </p>
+        </div>
+        <div class="good">
+            <div class=" pic">
+            <img src="images/sunnyday bu.jpg" alt="bucharest">
         </div>
 
 
