--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <li>lesson 07 <a href="lesson7/lazyload.html">Lazy Loading</a></li>
         <li>lesson 08 <a href="lesson8/stormcenter.html">stormcenter</a></li>
         <li>lesson 08 <a href="Lesson08/tablebuild.html">Table build</a></li>
-        <li>lesson 09 <a href="lesson9/prophets.html">Prophets/a></li>
-
+        <li>lesson 09 <a href="lesson9/prophets.html">Prophets</li>
+        <li>lesson 09 <a href="lesson9/home-page.html">wireframe</li>
         
     </ul>
       </section>
