--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <li>lesson 08 <a href="Lesson08/tablebuild.html">Table build</a></li>
         <li>lesson 09 <a href="lesson9/prophets.html">Prophets</li>
         <li>lesson 09 <a href="lesson9/home-page.html">wireframe</li>
-        
+          <li>lesson 09 <a href="lesson9/home.html">Home</a>
     </ul>
+    
       </section>
   </main>
 
