--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li>lesson 08 <a href="Lesson08/tablebuild.html">Table build</a></li>
         <li>lesson 09 <a href="lesson9/prophets.html">Prophets</li>
         <li>lesson 09 <a href="lesson9/home-page.html">wireframe</li>
-          <li>lesson 09 <a href="lesson9/home.html">Home</a>
+          <li>lesson 09 <a href="https://www.churchofjesuschrist.org/study/scriptures/the-family-a-proclamation-to-the-world/the-family-a-proclamation-to-the-world?lang=eng">Home</a>
     </ul>
     
       </section>
