--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li>lesson 09 <a href="lesson9/home.html">Home</a></li>
         <li>lesson 10 <a href="lesson10/preston-10.html">API Preston</a></li>
         <li>lesson 11 <a href="lesson11/index.html">Weather site</a></li>
+        <li>lesson 11 <a href="final/index.html">Final project</a></li>
         
 
       </ul>
