--- a/final/contact.html
+++ b/final/contact.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My site</title>
+  <link rel="shortcut icon" type="image/png" href="images/kalexc logo-min.png">
   <link rel="stylesheet" href="css/medium.css">
   <link rel="stylesheet" href="css/small.css">
   <link rel="stylesheet" href="css/large.css">
@@ -28,7 +29,7 @@
           <li><a href="city.html"> City</a></li>
           <li><a href="join.html">Join</a></li>
           <li><a href="directory.html">directory</a></li>
-          <li><a href="contact">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
