--- a/final/index.html
+++ b/final/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My site</title>
+    <link rel="shortcut icon" type="image/png" href="images/kalexc logo-min.png">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/large.css">
@@ -68,8 +69,8 @@
                     <br>
                 </p>
                 <button>
-                    join us now!!!
-                </button>
+                    <a href="join.html"> join us now!!!</a> 
+                  </button>
             </div>
 
             <div class="weather">
